--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button>New grid</button>
     <div class="grid">
-        
+
     </div>
 </body>
 <script src="script.js"></script>
